[gd_scene load_steps=3 format=3 uid="uid://cxx57oxpc1hs1"]

[ext_resource type="PackedScene" uid="uid://b178oc644nu6t" path="res://scenes/inventory.tscn" id="1_eo20v"]
[ext_resource type="Script" path="res://scenes/inventory_controller.gd" id="1_ll4r5"]

[node name="InventoryController" type="HBoxContainer"]
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 64
script = ExtResource("1_ll4r5")

[node name="LeftContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="LeftInventory" parent="LeftContainer" instance=ExtResource("1_eo20v")]
layout_mode = 2

[node name="RightContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="RightInventory" parent="RightContainer" instance=ExtResource("1_eo20v")]
layout_mode = 2
